# youtube_publisher

./: .gitignore  CLAUDE.md  README.md  __init__.py  __main__.py  auth.py  credentials.py  install.sh  metadata.py  publish.py  pyproject.toml  upload.py
tests/: test_smoke.py
