[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube_publisher"
version = "0.1.0"
description = "Tag MP4 + upload to YouTube via Data API v3. OAuth pickle cached at ~/.cache/youtube_publisher/. Supports publish_at for scheduled releases."
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "mutagen",
]

[tool.setuptools]
packages = ["youtube_publisher"]

[tool.setuptools.package-dir]
"youtube_publisher" = "."
